<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no" />

    <EditText android:background="#b0c4de"
        android:id="@+id/input_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText android:background="#b0c4de"
        android:id="@+id/input_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText android:background="#b0c4de"
        android:id="@+id/input_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel" />

    <EditText android:background="#b0c4de"
        android:id="@+id/input_tel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment" />

    <EditText android:background="#b0c4de"
        android:id="@+id/input_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <ImageView
        android:id="@+id/input_photo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        />

    <Button style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button_photo"
        android:text="@string/photo"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="photo"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hotelInput"
        android:text="@string/input_exec" />

</LinearLayout>